// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostList /> Should render a message when there are no posts 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostList
    fetchRemovePost={[Function]}
    invalidPost={false}
    loadingPosts={true}
    posts={Array []}
    sortByOption="-voteScore"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="noPosts"
>
        <h4>
                No posts to show
        </h4>
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h4>
          No posts to show
</h4>,
        "className": "noPosts",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No posts to show",
        },
        "ref": null,
        "rendered": "No posts to show",
        "type": "h4",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="noPosts"
>
          <h4>
                    No posts to show
          </h4>
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h4>
            No posts to show
</h4>,
          "className": "noPosts",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No posts to show",
          },
          "ref": null,
          "rendered": "No posts to show",
          "type": "h4",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`<PostList /> Should render two PostCard elements 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostList
    fetchRemovePost={[Function]}
    invalidPost={false}
    loadingPosts={true}
    posts={
        Array [
            Object {
              "author": "thingtwo",
              "body": "Everyone says so after all.",
              "category": "react",
              "commentCount": 2,
              "deleted": false,
              "id": "8xf0y6ziyjabvozdd253nd",
              "timestamp": 1467166872634,
              "title": "Udacity is the best place to learn React",
              "voteScore": 10,
            },
            Object {
              "author": "thingone",
              "body": "Just kidding. It takes more than 10 minutes to learn technology.",
              "category": "redux",
              "commentCount": 0,
              "deleted": false,
              "id": "6ni6ok3ym7mf1p33lnez",
              "timestamp": 1468479767190,
              "title": "Learn Redux in 10 minutes!",
              "voteScore": -5,
            },
          ]
    }
    sortByOption="-voteScore"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
>
        <PostCard
                onRemovePost={[Function]}
                post={
                        Object {
                                "author": "thingtwo",
                                "body": "Everyone says so after all.",
                                "category": "react",
                                "commentCount": 2,
                                "deleted": false,
                                "id": "8xf0y6ziyjabvozdd253nd",
                                "timestamp": 1467166872634,
                                "title": "Udacity is the best place to learn React",
                                "voteScore": 10,
                              }
                }
        />
        <PostCard
                onRemovePost={[Function]}
                post={
                        Object {
                                "author": "thingone",
                                "body": "Just kidding. It takes more than 10 minutes to learn technology.",
                                "category": "redux",
                                "commentCount": 0,
                                "deleted": false,
                                "id": "6ni6ok3ym7mf1p33lnez",
                                "timestamp": 1468479767190,
                                "title": "Learn Redux in 10 minutes!",
                                "voteScore": -5,
                              }
                }
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <PostCard
            onRemovePost={[Function]}
            post={
                        Object {
                                    "author": "thingtwo",
                                    "body": "Everyone says so after all.",
                                    "category": "react",
                                    "commentCount": 2,
                                    "deleted": false,
                                    "id": "8xf0y6ziyjabvozdd253nd",
                                    "timestamp": 1467166872634,
                                    "title": "Udacity is the best place to learn React",
                                    "voteScore": 10,
                                  }
            }
/>,
          <PostCard
            onRemovePost={[Function]}
            post={
                        Object {
                                    "author": "thingone",
                                    "body": "Just kidding. It takes more than 10 minutes to learn technology.",
                                    "category": "redux",
                                    "commentCount": 0,
                                    "deleted": false,
                                    "id": "6ni6ok3ym7mf1p33lnez",
                                    "timestamp": 1468479767190,
                                    "title": "Learn Redux in 10 minutes!",
                                    "voteScore": -5,
                                  }
            }
/>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "onRemovePost": [Function],
            "post": Object {
              "author": "thingtwo",
              "body": "Everyone says so after all.",
              "category": "react",
              "commentCount": 2,
              "deleted": false,
              "id": "8xf0y6ziyjabvozdd253nd",
              "timestamp": 1467166872634,
              "title": "Udacity is the best place to learn React",
              "voteScore": 10,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "onRemovePost": [Function],
            "post": Object {
              "author": "thingone",
              "body": "Just kidding. It takes more than 10 minutes to learn technology.",
              "category": "redux",
              "commentCount": 0,
              "deleted": false,
              "id": "6ni6ok3ym7mf1p33lnez",
              "timestamp": 1468479767190,
              "title": "Learn Redux in 10 minutes!",
              "voteScore": -5,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <PostCard
                    onRemovePost={[Function]}
                    post={
                              Object {
                                        "author": "thingtwo",
                                        "body": "Everyone says so after all.",
                                        "category": "react",
                                        "commentCount": 2,
                                        "deleted": false,
                                        "id": "8xf0y6ziyjabvozdd253nd",
                                        "timestamp": 1467166872634,
                                        "title": "Udacity is the best place to learn React",
                                        "voteScore": 10,
                                      }
                    }
          />
          <PostCard
                    onRemovePost={[Function]}
                    post={
                              Object {
                                        "author": "thingone",
                                        "body": "Just kidding. It takes more than 10 minutes to learn technology.",
                                        "category": "redux",
                                        "commentCount": 0,
                                        "deleted": false,
                                        "id": "6ni6ok3ym7mf1p33lnez",
                                        "timestamp": 1468479767190,
                                        "title": "Learn Redux in 10 minutes!",
                                        "voteScore": -5,
                                      }
                    }
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <PostCard
              onRemovePost={[Function]}
              post={
                            Object {
                                          "author": "thingtwo",
                                          "body": "Everyone says so after all.",
                                          "category": "react",
                                          "commentCount": 2,
                                          "deleted": false,
                                          "id": "8xf0y6ziyjabvozdd253nd",
                                          "timestamp": 1467166872634,
                                          "title": "Udacity is the best place to learn React",
                                          "voteScore": 10,
                                        }
              }
/>,
            <PostCard
              onRemovePost={[Function]}
              post={
                            Object {
                                          "author": "thingone",
                                          "body": "Just kidding. It takes more than 10 minutes to learn technology.",
                                          "category": "redux",
                                          "commentCount": 0,
                                          "deleted": false,
                                          "id": "6ni6ok3ym7mf1p33lnez",
                                          "timestamp": 1468479767190,
                                          "title": "Learn Redux in 10 minutes!",
                                          "voteScore": -5,
                                        }
              }
/>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "onRemovePost": [Function],
              "post": Object {
                "author": "thingtwo",
                "body": "Everyone says so after all.",
                "category": "react",
                "commentCount": 2,
                "deleted": false,
                "id": "8xf0y6ziyjabvozdd253nd",
                "timestamp": 1467166872634,
                "title": "Udacity is the best place to learn React",
                "voteScore": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "onRemovePost": [Function],
              "post": Object {
                "author": "thingone",
                "body": "Just kidding. It takes more than 10 minutes to learn technology.",
                "category": "redux",
                "commentCount": 0,
                "deleted": false,
                "id": "6ni6ok3ym7mf1p33lnez",
                "timestamp": 1468479767190,
                "title": "Learn Redux in 10 minutes!",
                "voteScore": -5,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
